--- a/P000339.opf/meta.yml
+++ b/P000339.opf/meta.yml
@@ -1,15 +1,16 @@
-id: opecha:P000339
+id: P000339
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W1KG21959
   title: ས་སྐྱའི་ལམ་འབྲས་བླ་བརྒྱུད་ཀྱི་རྣམ་ཐར།
-  volume:
+  author: ''
+  volumes:
     22166df1b7f0425ea8a47a0d7fcbe908:
       image_group_id: I1KG21983
       title: Volume 1 of sa skya pa lam 'bras bla brgyud kyi rnam thar/
       volume_number: 1
       total_pages: 662
-  author: ''
+      base_file: v001.txt
 ebook_metadata:
   title: ས་སྐྱའི་ལམ་འབྲས་བླ་བརྒྱུད་ཀྱི་རྣམ་ཐར།
   author: ''
