--- a/P000339.opf/layers/v001/Pagination.yml
+++ b/P000339.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 25b9ea02efa441a8a7be1f1879fd2955
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   3b9440461fdd42e98b5273e147584157:
